# vision-language-similarity

./: .env.local  .gitignore  IMPLEMENTATION_DETAILS.md  Makefile  README.md  SCALING_FOR_HIGH_TRAFFIC_DEPLOYMENT.md  challenge_set_comparison_stats.csv  challenge_set_with_scores.csv  dev-setup.sh  llms-full.txt  llms.txt  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
app/: evaluation_cli.py
challenge_brief/: DESIGN_DECISIONS.md  SCALING_FOR_HIGH_TRAFFIC_DEPLOYMENT.md  SIMILARITY_METRIC_PERFORMANCE_ANALYSIS.md
challenge_brief_answers/: SCALING_FOR_HIGH_TRAFFIC_DEPLOYMENT.md
cli/: challenge_set_comparison_stats.csv  challenge_set_with_scores.csv
config/: models.json
docker/: base.Dockerfile  docker-compose.integration-test.yml  docker-compose.local.yml  docker-compose.service.yml  docker-compose.unit-test.yml  ray-base.Dockerfile  service.Dockerfile
docker/fastapi-testing/: docker-compose.service.yml  test.Dockerfile
docker/observability/: docker-compose.otel.yml  grafana-datasources.yml  grafana_dashboard.json  load_gen.sh  otel-collector.yml  prometheus.yml  promtail-config.yaml  urls.txt
docker/ray/: ray-service.Dockerfile
load_tests/: README.md  __init__.py  locustfile.py  requirements.txt  test_load_performance.py
scripts/: Makefile  build.sh  run_style.sh  run_test.sh
service/: __version__.py  constants.py  log.py  main.py  ray_main.py
service/admin/: __init__.py  routes.py
service/config/: __init__.py  model_configs.py  settings.py
service/core/: __init__.py  config.py  device_manager.py  evaluator.py  exception_handler.py  exceptions.py  image_loader.py  models.py  observability.py
service/core/ml/: __init__.py
service/core/ml/engines/: __init__.py  base_evaluator.py  evaluator.py  model_manager.py  openclip_evaluator.py
service/core/ml/models/: __init__.py  base.py  factory.py  openclip_model.py
service/core/ml/models/similarity_models/: __init__.py  factory.py  openclip_model.py
service/core/ml/preprocessing/: __init__.py
service/core/ml/utils/: __init__.py  config.py  image_loader.py  image_processor.py  metrics_recorder.py  result_builder.py  types.py
service/core/similarity_models/: __init__.py  base.py  factory.py  openclip_model.py
service/evaluation/: handler.py  routes.py  schema.py
service/model_management/: __init__.py  manager.py
service/observability/: __init__.py  prometheus_middleware.py
service/system/: __init__.py  handler.py  routes.py
tests/: conftest.py  test_device_manager.py  test_evaluator.py  test_image_loader.py
tests/data/samples/: challenge_set.csv
tests/fixtures/: api_fixtures.py  data_fixtures.py  evaluator_fixtures.py
tests/integration/: test_end_to_end_evaluation.py
tests/performance/: __init__.py  conftest.py  test_memory_usage.py  test_model_performance.py
tests/unit/: conftest.py  test_core_components.py  test_custom_exceptions.py  test_evaluation_api.py  test_evaluation_handler.py  test_model_config_management.py  test_version.py
tests/unit/admin/: test_admin_routes.py
tests/unit/config/: test_model_configs.py
tests/unit/core/: test_custom_exceptions.py  test_device_manager.py  test_evaluator.py  test_image_loader.py  test_model_configs.py
tests/unit/evaluation/: test_evaluation_handler.py  test_evaluation_routes.py
tests/unit/model_management/: test_model_manager.py
tests/unit/system/: test_health.py  test_system_handler.py  test_system_routes.py
